# Cypher-DDS

./: .gitignore  Cypher-DDS_MASTER.md  PRODUCTION_REVIEW_2026-07-17.md  PROJECT_STATUS.md  README.md  VEHICLE_TIED_CODING_FUNCTIONS_ROADMAP.md  buildozer.spec  cypher-dds-gui.spec  cypher-dds.spec  main.py  pyproject.toml
.github/workflows/: build-android.yml  build-linux.yml  build-windows.yml
plans/: 00-ROADMAP.md  01-GUI-PLAN.md  02-ANDROID-VALIDATION.md  03-DESKTOP-GUI-VALIDATION.md
src/cypher_dds/: __init__.py  session.py  theme.py  ui_format.py
src/cypher_dds/core/: __init__.py  actions.py  android_bluetooth_adapter.py  bluetooth_adapter.py  dtc.py  elm327.py  mock_adapter.py  pids.py  serial_conn.py  uds.py  vehicle_coding.py  vin.py
src/cypher_dds/gui/: __init__.py  app.py
src/cypher_dds/mobile/: __init__.py  app.py
src/cypher_dds/profiles/: __init__.py  base.py  catalog.py  dodge_chrysler.py  ford.py  gm.py  honda_acura.py  kia.py  toyota_lexus.py
src/cypher_dds/tui/: __init__.py  app.py  theme.py
tests/: test_actions.py  test_bluetooth_adapter.py  test_dtc.py  test_elm327.py  test_gui_app.py  test_pids.py  test_profiles.py  test_serial_conn.py  test_serial_conn_android.py  test_session.py  test_tui_app.py  test_uds.py  test_vin.py
