[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cypher-dds"
version = "0.1.0"
description = "Terminal tool for talking to vehicles over USB via ELM327-based OBD2 adapters"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pyserial>=3.5",
    "textual>=0.58",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]
build = [
    "pyinstaller>=6.0",
]
mobile = [
    "kivy>=2.3",
]

[project.scripts]
cypher-dds = "cypher_dds.tui.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
